samples/_failures_safe/1761730306_ca3d44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77ee5322.c: In function ‘main’:
./samples/SAFE/__tmp_77ee5322.c:129:37: error: expected ‘]’ at end of input
  129 |             printf("%3d ", matrix1[j
      |                                     ^
      |                                     ]
./samples/SAFE/__tmp_77ee5322.c:129:13: error: expected declaration or statement at end of input
  129 |             printf("%3d ", matrix1[j
      |             ^~~~~~
./samples/SAFE/__tmp_77ee5322.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_77ee5322.c:129:13: error: expected declaration or statement at end of input
